# chess3d-rs

./: Cargo.toml
src/chess-net-client/: Cargo.toml
src/chess-net-client/src/: main.rs
src/chess-server/: Cargo.toml
src/chess-server/src/: main.rs
src/chess3d/: Cargo.toml
src/chess3d-common/: Cargo.toml
src/chess3d-common/src/: lib.rs
src/chess3d/src/: lib.rs
src/console-player/: Cargo.toml
src/console-player/src/: main.rs
