[package]
name = "chess-server"
version = "0.1.0"
authors = ["Nolan K <perpetualcolor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess3d = { path = "../chess3d" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
crossbeam = "0.8.0"
chess3d-common = { path = "../chess3d-common" }