[package]
name = "console-player"
version = "0.1.0"
authors = ["Nolan K <perpetualcolor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess3d = { path = "../chess3d" }
cursive = {version = "0.15.0", default-features = false, features = ["pancurses-backend"]}